bk_ida/gccida/c1/iv_add_mult_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/iv_add_mult_cost/src/loop.c:8241:39: error: use of undeclared identifier 'machine_mode'
v6 = expand_mult_add( b, reg, m, a, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/iv_add_mult_cost/src/obj/loop.o] Error 1
